@@ -37,6 +37,12 @@
 	the header/footer font size was different than the
 	default body font size.
 
+	<LI>The GUI interface incorrectly localized URLs when
+	doing a "save as" operation.
+
+	<LI>The PNG background color was not correct for PNG files
+	using <= 8 bits per pixel.
+
 </UL>
 
 <H2>Changes in HTMLDOC v1.8.22</H2>
